# mcp-tools

./: .dockerignore  .gitignore  .ruff.toml  CLAUDE.md  LICENSE  README.md  SECURITY.md  docker-compose.tunnel.yml  docker-compose.yml  env.example
.claude/skills/deploy/: SKILL.md
.claude/skills/new-tool/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  scanning.yml
deploy/aws/: Pulumi.yaml  README.md  __main__.py  requirements.txt  userdata.sh
deploy/cloudflare/: .gitignore  Pulumi.yaml  README.md  __main__.py  requirements.txt
deploy/host/: reconcile.py
docs/: ARCHITECTURE.md  DEPLOY.md  GATEKEEPER.md  SETUP.md  SUBSTRATE.md
docs/deploy/: aws.md  local.md
scripts/: new-tool.sh  preview-widget.py
scripts/templates/: Dockerfile.template
security/: __init__.py  auth.py  serve.py  test_approval.py  test_manifests.py  test_reconciler.py  test_serve.py  test_stack.py
security/approval/: approve_widget.py  gating.py  manage_widget.py  middleware.py  secrets_widget.py  widget_spike.py
security/egress-proxy/: Dockerfile  README.md  squid.compose.conf
security/eval/garak/: README.md  (+1 more)
security/guardrail/: __init__.py  middleware.py
security/guardrail/service/: Dockerfile  README.md  pyproject.toml  service.py
security/guardrail/service/systemd/: guardrail-service.service
security/ingress/: README.md  cloudflared.config.yml
shared/: guardrail.py
tools/browser/: Dockerfile  env.example  server.py  test_browser.py
tools/data/: Dockerfile  README.md  bars.py  deploy.json  env.example  equity.py  feeds.py  lean_export.py  pipeline.py  requirements.txt  server.py  store.py  test_data.py
tools/gatekeeper/: Dockerfile  README.md  server.py  test_gatekeeper.py
tools/hamilton/: server.py
tools/lean/: Dockerfile  deploy.json  env.example  server.py  test_lean.py
tools/quant/: Dockerfile
tools/telegram/: Dockerfile  README.md  deploy.json  env.example  server.py  test_telegram.py
tools/workspace/: Dockerfile  README.md  deploy.json  env.example  requirements.txt  server.py  test_workspace.py
tools/x-mcp/: README.md  VENDORED.md  env.example  requirements.txt  server.py
tools/xmcp/: Dockerfile  README.md  deploy.json  env.example  requirements.txt  server.py  test_xmcp.py
(+19 files in other folders)
