[project]
name = "guardrail-service"
version = "0.2.0"
description = "Layer-4 guardrail service: prompt-injection screen with a provider switch — LlamaFirewall PromptGuard + HiddenASCII (local model) or Amazon Bedrock Guardrails (ApplyGuardrail). THREAT-MODEL.md Layer 4 (detect leg)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "llamafirewall==1.0.3",
    # The bedrock provider's only extra dependency; a rounding error next to torch.
    "boto3>=1.35",
    # Security floor: transformers < 5.3.0 has an RCE via attacker-crafted model config
    # (GHSA-29pf-2h5f-8g72). transformers 5.x needs huggingface_hub >= 1.0, which
    # removed the `HfFolder` that llamafirewall 1.0.3 still imports — service.py shims
    # it back in before the llamafirewall import (drop the shim + this note when
    # llamafirewall > 1.0.3 supports hub 1.x natively).
    "transformers>=5.3.0",
    "huggingface_hub>=1.3",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.11",
]

[tool.uv]
# llamafirewall pulls torch + transformers (multi-GB) — kept in this service's
# own venv so the heavy deps never leak into the MCP bridge or the srt path.
#
# Security floor on a transitive dep: protobuf < 5.29.6 has a JSON recursion-depth
# bypass (GHSA-7gcm-g887-7qv7); it reaches us via semgrep's opentelemetry stack, so
# this forces a semgrep new enough to allow the patched protobuf.
constraint-dependencies = ["protobuf>=5.29.6"]
